[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/target.png" type="Texture" id=1]
[ext_resource path="res://src/Target.gd" type="Script" id=2]
[ext_resource path="res://Assets/audio/point.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "destroy",
"speed": 48.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 12.9239

[node name="Target" type="StaticBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -5, -1 )
frames = SubResource( 5 )
animation = "destroy"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 11.3446, 14.555 )
shape = SubResource( 11 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
